--- a/template_notebook.ipynb
+++ b/template_notebook.ipynb
@@ -9,11 +9,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13aaf2e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import neccessary modules, add to this cell as needed\n",
+    "from pyspark.sql import SparkSession\n",
+    "import pyspark.sql.functions as F"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f88bb614",
    "metadata": {},
    "source": [
-    "## Part 1"
+    "## Part 1: Load the Sample Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb9546f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initiate a new Spark session and set the case sensitivity option\n",
+    "spark = (\n",
+    "    SparkSession.builder\n",
+    "        .appName(\"cyberquest\")\n",
+    "        .getOrCreate()\n",
+    ")\n",
+    "spark.conf.set(\"spark.sql.caseSensitive\", True)"
    ]
   },
   {
@@ -22,14 +50,67 @@
    "id": "a8c7ea7f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_bronze = spark.read.json(\"./data/sysmon_spearphish_cribl.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "219ef3ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_schema = \"Image string, UserID string, QueryName string, QueryStatus decimal, QueryResults string, SystemTime string, ProcessId string, Channel string\"\n",
+    "\n",
+    "df_silver = (df_bronze\n",
+    "    .select(\n",
+    "        F.to_timestamp(F.col(\"_time\")).alias(\"_time\"),\n",
+    "        \"Computer\",\n",
+    "        \"EventCode\",\n",
+    "        \"User\",\n",
+    "        F.from_json(F.col(\"_raw\"), raw_schema).alias(\"_parsed\"),\n",
+    "        \"_raw\",\n",
+    "    )\n",
+    "    .select(\"*\", \"_parsed.*\")\n",
+    "    .drop(\"_parsed\")\n",
+    ")\n",
+    "df_silver.createOrReplaceTempView(\"sysmon_silver\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6afcd05b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PySpark Example\n",
+    "df_silver.filter(\"EventCode == '22'\").limit(5).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "585b86a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SQL Example\n",
+    "spark.sql(\"\"\"\n",
+    "SELECT *\n",
+    "FROM sysmon_silver\n",
+    "WHERE EventCode == 22\n",
+    "LIMIT 5\n",
+    "\"\"\").show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "6b33ff37",
    "metadata": {},
    "source": [
-    "## Part 2"
+    "## Part 2: Detection Engineering"
    ]
   },
   {
@@ -45,7 +126,55 @@
    "id": "ff1b4e43",
    "metadata": {},
    "source": [
-    "## Part 3"
+    "## Part 3: Additional Steps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd252476",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ea1f3d2",
+   "metadata": {},
+   "source": [
+    "### Part 3.1: Normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9a10f26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b54dcfee",
+   "metadata": {},
+   "source": [
+    "### Part 3.2: Alert Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "060cafc7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af6a9135",
+   "metadata": {},
+   "source": [
+    "### Part 3.3: Enrichment"
    ]
   },
   {
@@ -63,13 +192,27 @@
    "source": [
     "## Summary\n",
     "\n",
-    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+    "Summarize your submission here, comments are helpful to add throughout your code as well."
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.13.7)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
