--- a/template_notebook.ipynb
+++ b/template_notebook.ipynb
@@ -9,11 +9,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13aaf2e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import neccessary modules, add to this cell as needed\n",
+    "# Provided PySpark examples\n",
+    "\n",
+    "from pyspark.sql import SparkSession\n",
+    "import pyspark.sql.functions as F"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f88bb614",
    "metadata": {},
    "source": [
-    "## Part 1"
+    "## Part 1: Load the Sample Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb9546f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initiate a new Spark session and set the case sensitivity option\n",
+    "spark = (\n",
+    "    SparkSession.builder\n",
+    "        .appName(\"cyberquest\")\n",
+    "        .getOrCreate()\n",
+    ")\n",
+    "spark.conf.set(\"spark.sql.caseSensitive\", True)"
    ]
   },
   {
@@ -22,14 +52,55 @@
    "id": "a8c7ea7f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO: Load the raw data\n",
+    "df_bronze = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "219ef3ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Parse the raw data into something relevant and usable\n",
+    "df_silver = None\n",
+    "df_silver.createOrReplaceTempView(\"sysmon_silver\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6afcd05b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Provided PySpark Example\n",
+    "df_silver.limit(5).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "585b86a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Provided PySpark SQL Example\n",
+    "spark.sql(\"\"\"\n",
+    "SELECT *\n",
+    "FROM sysmon_silver\n",
+    "LIMIT 5\n",
+    "\"\"\").show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "6b33ff37",
    "metadata": {},
    "source": [
-    "## Part 2"
+    "## Part 2: Detection Engineering"
    ]
   },
   {
@@ -45,7 +116,55 @@
    "id": "ff1b4e43",
    "metadata": {},
    "source": [
-    "## Part 3"
+    "## Part 3: Additional Steps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd252476",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ea1f3d2",
+   "metadata": {},
+   "source": [
+    "### Part 3.1: Normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9a10f26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b54dcfee",
+   "metadata": {},
+   "source": [
+    "### Part 3.2: Alert Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "060cafc7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af6a9135",
+   "metadata": {},
+   "source": [
+    "### Part 3.3: Enrichment"
    ]
   },
   {
@@ -63,13 +182,27 @@
    "source": [
     "## Summary\n",
     "\n",
-    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+    "Summarize your submission here, comments are helpful to add throughout your code as well."
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.13.7)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
